[package]
authors = [ "Nick Schipano <nick@firstfoundry.co>" ]
edition = "2018"
name    = "parser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
Inflector       = "0.11.4"
ethabi          = "9.0.1"
itertools       = "0.9.0"
primitive-types = "0.6.2"
proc-macro2     = "1.0.18"
quote           = "1.0.7"
rustc-hex       = "2.0.1"
serde           = "1.0.103"
serde_json      = "1.0.44"
serde_syn       = "0.1.0"
syn             = { version = "1.0.30", features = [ "extra-traits", "parsing", "printing" ] }
tiny-keccak     = "1.5.0"
traits          = { path = "../traits" }
web3            = "0.10.0"
