[package]
authors = [ "Nick Schipano <maverickn@gmail.com>" ]
edition = "2018"
name    = "parser"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
Inflector       = "0.11.4"
ethabi          = "9.0.1"
itertools       = "0.9.0"
primitive-types = "0.6.2"
proc-macro2     = "1.0.18"
quote           = "1.0.7"
rustc-hex       = "2.1.0"
serde           = "1.0.114"
serde_json      = "1.0.56"
serde_syn       = "0.1.0"
syn             = { version = "1.0.33", features = [ "extra-traits", "parsing", "printing" ] }
tiny-keccak     = "1.5.0"
traits          = { path = "../traits" }
web3            = "0.10.0"
